base/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-api
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: greeting-api
  template:
    metadata:
      labels:
        deployment: greeting-api
    spec:
      containers:
      - name: greeting-api
        image: quay.io/tstockwell/greeting-api:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
