base/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: greeting-api
