base/app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: greeting-api
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: greeting-api
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
